--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "0.20.0",
+    "font-awesome": "4.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.3"
